--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
   </div>
 
   <script>
-    const BACKEND_URL = 'https://libria-ai-backend.onrender.com; //
+    const BACKEND_URL = 'https://libria-ai-backend.onrender.com;
 let userData = { nama: '', email: '', telepon: '', alamat: '' };
 let currentField = 'nama';
 let video = document.getElementById('qr-video');
